[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbfx"
version = "0.0.1"
authors = [ {name="buherator", email="buherator@silentsignal.hu"}, ]
description = "Kaitai Struct parser of MS-NFX"
readme = "README.md"
requires-python = ">=3.0"
dependencies = ["kaitaistruct >= 0.11"]

