[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbfx"
version = "0.0.1"
authors = [ {name="buherator", email="buherator@silentsignal.hu"}, ]
description = "Kaitai Struct parser of MS-NFX"
readme = "README.md"
requires-python = ">=3.0"
dependencies = ["kaitaistruct@git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git"] # until 0.11 is officially released

# For Git-based dependency fetching
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
